add imgs, lecture3-iterative.ipynb. update lecture2-guideline.ipynb

--- a/lecture3-iterative.ipynb
+++ b/lecture3-iterative.ipynb
@@ -5,13 +5,13 @@
    "id": "f864ccf1",
    "metadata": {},
    "source": [
-    "# 指导原则（Guidelines）\n",
+    "# 3. 迭代（Iterative）\n",
     "\n",
-    "编写提示词有两个原则：\n",
+    "有一个好的迭代过程能不断改进你的提示，那么你就能找到对任务实现效果较好的提示词。\n",
     "\n",
-    "1.编写具体、明确的提示词\n",
+    "提示词在第一次是否起作用并不重要，最重要的是获得适用于应用程序的提示的过程。\n",
     "\n",
-    "2.给模型足够的时间思考\n"
+    "让我们进入代码，我向你展示一些框架，让你思考如何迭代地开发提示。\n"
    ]
   },
   {
@@ -19,87 +19,33 @@
    "id": "adb76b87",
    "metadata": {},
    "source": [
-    "## 1. 系统配置\n",
+    "## 3.1 提示词的迭代开发\n",
     "\n",
-    "如下是使用 openai API 的方法：\n",
+    "如果你和我一起上过机器学习课，你可能看到我使用这样的一张图。我们在机器学习开发中通常会有一个想法，然后实现它。编写代码，获取数据，训练你的模型，这会给你一个实验结果。\n",
     "\n",
-    "安装模块\n",
-    "```bash\n",
-    "python3 -m pip install openai\n",
-    "python3 -m pip install dotenv\n",
-    "```\n",
+    "然后，你可以查看输出，也许进行错误分析，找出它在什么地方工作或不工作，然后甚至可能改变你要解决什么问题或如何处理的想法，然后改变你的实施方案，运行另一个实验等等，如此反复迭代，以获得一个有效的机器学习模型。如果你对机器学习不熟悉，没有见过这张图，也不要担心，这对本课程的其它余部分来说并不重要。\n",
     "\n",
-    "在 openai 官网创建 API key，充值，随后在自己的 Linux 电脑上设置环境变量：\n",
-    "```bash\n",
-    "export OPENAI_API_KEY=<openai-api-key>\n",
-    "```\n",
+    "![iterative](./img/3-1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b9875d2",
+   "metadata": {},
+   "source": [
+    "但是，当你使用 LLM 开发应用程序的编写提示时，这个过程可以说非常相似。你对自己想做什么、想完成的任务有一个想法，然后你就可以初步尝试编写，希望能有一个清晰和具体的提示，如果合适的话，会给系统思考的时间，然后你就可以运行它，看看会得到什么结果。\n",
     "\n",
-    "如果是使用 jupyter 的话，那么需要在 .env 中设置好环境变量，如下：\n",
-    "```bash\n",
-    "OPENAI_API_KEY=<openai-api-key>\n",
-    "```\n",
+    "如果第一次的效果不够好，那么就需要反复迭代的过程来搞清楚为什么指令不够清晰，为什么它没有给算法足够的时间思考，这样你就可以完善想法，完善提示。在此基础上进行多次循环，直到你最终得到一个适用于你的应用程序的提示。\n",
     "\n",
-    "随后运行下面的代码加载环境变量\n"
+    "这也是为什么我个人没有那么关注网络上那些30个完美提示词的文章，因为我认为可能没有一个完美的提示来适用于世间万物。重要的是，你要有一个迭代过程，用来为你的特定应用挖掘出良好的提示。\n",
+    "\n",
+    "让我们一起来看看代码示例。这里有上节视频中你所看到的初始代码，导入了 openai 和 os，然后我们得到 OpenAI 的 API key，这是辅助函数 get_completion()。\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5762afae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dotenv\n",
-    "import os\n",
-    "\n",
-    "# Reload the variables in your '.env' file (override the existing variables)\n",
-    "dotenv.load_dotenv(\".env\", override=True)\n",
-    "\n",
-    "# 'OPENAI_API_KEY' is refreshed now\n",
-    "print('OPENAI_API_KEY = ', os.environ.get('OPENAI_API_KEY')) # MY_VAR = HELLO_BOB"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97156951",
-   "metadata": {},
-   "source": [
-    "使用下面的代码能迅速检验自己是否能使用 openai api key：(如果在国内，可能要科学上网)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e2c8da2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI()\n",
-    "\n",
-    "response = client.responses.create(\n",
-    "    model=\"gpt-4.1\",\n",
-    "    input=\"Write a one-sentence bedtime story about a unicorn.\"\n",
-    ")\n",
-    "\n",
-    "print(response.output_text)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "adde0d74",
-   "metadata": {},
-   "source": [
-    "之前的代码只是为了检验是否能使用 openAI api key，以及能否读取环境变量，随后的代码更正式\n",
-    "\n",
-    "首先，先使用 dotenv 加载环境变量，主要是 OPENAI_API_KEY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62cf4672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +59,114 @@
     "\n",
     "openai.api_key = os.getenv('OPENAI_API_KEY') \n",
     "\n",
-    "client = OpenAI()\n"
+    "client = OpenAI()\n",
+    "\n",
+    "# 2. 定义 get_completion 方法\n",
+    "def get_completion(instructions, prompt, model=\"gpt-3.5-turbo\"):\n",
+    "    response = client.responses.create(\n",
+    "        model=model,\n",
+    "        instructions=instructions,\n",
+    "        input=prompt,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "    )\n",
+    "    return response.output_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97156951",
+   "metadata": {},
+   "source": [
+    "在这个视频中，我将使用\"“总结椅子情况介绍”\"的任务作为运行示例。我把它粘贴在这里，你可以随时暂停视频，在 Notebook 上仔细阅读这些代码。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e2c8da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fact_sheet_chair = \"\"\"\n",
+    "OVERVIEW\n",
+    "- Part of a beautiful family of mid-century inspired office furniture, \n",
+    "including filing cabinets, desks, bookcases, meeting tables, and more.\n",
+    "- Several options of shell color and base finishes.\n",
+    "- Available with plastic back and front upholstery (SWC-100) \n",
+    "or full upholstery (SWC-110) in 10 fabric and 6 leather options.\n",
+    "- Base finish options are: stainless steel, matte black, \n",
+    "gloss white, or chrome.\n",
+    "- Chair is available with or without armrests.\n",
+    "- Suitable for home or business settings.\n",
+    "- Qualified for contract use.\n",
+    "\n",
+    "CONSTRUCTION\n",
+    "- 5-wheel plastic coated aluminum base.\n",
+    "- Pneumatic chair adjust for easy raise/lower action.\n",
+    "\n",
+    "DIMENSIONS\n",
+    "- WIDTH 53 CM | 20.87”\n",
+    "- DEPTH 51 CM | 20.08”\n",
+    "- HEIGHT 80 CM | 31.50”\n",
+    "- SEAT HEIGHT 44 CM | 17.32”\n",
+    "- SEAT DEPTH 41 CM | 16.14”\n",
+    "\n",
+    "OPTIONS\n",
+    "- Soft or hard-floor caster options.\n",
+    "- Two choices of seat foam densities: \n",
+    " medium (1.8 lb/ft3) or high (2.8 lb/ft3)\n",
+    "- Armless or 8 position PU armrests \n",
+    "\n",
+    "MATERIALS\n",
+    "SHELL BASE GLIDER\n",
+    "- Cast Aluminum with modified nylon PA6/PA66 coating.\n",
+    "- Shell thickness: 10 mm.\n",
+    "SEAT\n",
+    "- HD36 foam\n",
+    "\n",
+    "COUNTRY OF ORIGIN\n",
+    "- Italy\n",
+    "\"\"\" \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adde0d74",
+   "metadata": {},
+   "source": [
+    "这是有一张椅子的说明书，上面写着它的灵感来自于一个华丽的中世纪家族，还有结构，尺寸，选项，材料，来自意大利，等等。所以，假设你想拿着这份说明书，帮助营销团队为在线零售网站编写一份描述。\n",
+    "\n",
+    "然后我们会有如下的提示，我把上节课的提示策略直接粘贴过来，所以我在这里的提示说，你的任务是根据技术信息表，帮助营销团队为零售网站创建描述，编写一个产品描述，等等。这是我第一次尝试向大语言模型解释任务。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62cf4672",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 3. 使用模型\n",
+    "instructions=f\"\"\"\n",
+    "Your task is to help a marketing team create a \n",
+    "description for a retail website of a product based \n",
+    "on a technical fact sheet.\n",
+    "\n",
+    "Write a product description based on the information \n",
+    "provided in the technical specifications delimited by \n",
+    "triple backticks.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "Technical specifications: ```{fact_sheet_chair}```\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(instructions, prompt)\n",
+    "\n",
+    "print(response) \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -121,9 +174,21 @@
    "id": "d5745fde",
    "metadata": {},
    "source": [
-    "我们将使用 OpenAI 的 GPT 3.5 Turbo模型，并使用 chat completion API。\n",
+    "这需要几秒钟的时间运行，然后我们得到了如下的预期结果。\n",
     "\n",
-    "现在我们只要定义一个辅助函数 get_completion() ，以便使用提示和查看生成的输出。函数 get_completion() 接收一个提示 prompt，返回该提示的完成内容。\n"
+    "Introducing the SWC-100/SWC-110 Office Chair - a stunning addition to our mid-century inspired office furniture collection. This chair is not just a piece of furniture; it's a statement of style and functionality.\n",
+    "\n",
+    "Designed to complement your workspace, the SWC-100/SWC-110 Office Chair comes in a variety of shell colors and base finishes, allowing you to customize it to suit your taste. Choose between plastic back and front upholstery or full upholstery in a range of fabric and leather options. The base finish options include stainless steel, matte black, gloss white, or chrome, giving you the flexibility to match your existing decor.\n",
+    "\n",
+    "Crafted for both home and business settings, this chair is built for comfort and durability. The 5-wheel plastic coated aluminum base ensures stability, while the pneumatic chair adjust feature allows for easy height adjustment.\n",
+    "\n",
+    "With dimensions of 53 cm in width, 51 cm in depth, and 80 cm in height, this chair provides ample seating space. The seat height is 44 cm, and the seat depth is 41 cm, offering ergonomic support for long hours of work.\n",
+    "\n",
+    "Customize your chair further with options like soft or hard-floor casters, choice of seat foam densities (medium or high), and the option of armless design or 8 position PU armrests.\n",
+    "\n",
+    "Constructed with high-quality materials, including cast aluminum with modified nylon coating for the shell base glider and HD36 foam for the seat, this chair is designed to last.\n",
+    "\n",
+    "Elevate your workspace with the SWC-100/SWC-110 Office Chair, made in Italy to bring a touch of sophistication to your environment. Experience the perfect blend of style, comfort, and functionality with this exceptional piece of furniture."
    ]
   },
   {
@@ -133,6 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TODO: here 看到这里\n",
+    "\n",
+    "\n",
     "# 2. 定义 get_completion 方法\n",
     "def get_completion(instructions, prompt, model=\"gpt-3.5-turbo\"):\n",
     "    response = client.responses.create(\n",
