lecture6-transform.ipynb: seems finish

--- a/lecture6-transform.ipynb
+++ b/lecture6-transform.ipynb
@@ -37,20 +37,25 @@
    "source": [
     "import openai\n",
     "import os\n",
+    "from openai import OpenAI\n",
     "\n",
+    "# 1. 根据环境变量获取 openai key\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "_ = load_dotenv(find_dotenv()) # read local .env file\n",
+    "_ = load_dotenv(find_dotenv())\n",
     "\n",
-    "openai.api_key = os.getenv('OPENAI_API_KEY')\n",
+    "openai.api_key = os.getenv('OPENAI_API_KEY') \n",
     "\n",
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0): \n",
-    " messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    " response = openai.ChatCompletion.create(\n",
-    " model=model,\n",
-    " messages=messages,\n",
-    " temperature=temperature, \n",
-    " )\n",
-    " return response.choices[0].message[\"content\"] "
+    "client = OpenAI()\n",
+    "\n",
+    "# 2. 定义 get_completion 方法\n",
+    "def get_completion(prompt, instructions=None, model=\"gpt-3.5-turbo\"):\n",
+    "    response = client.responses.create(\n",
+    "        model=model,\n",
+    "        instructions=instructions,\n",
+    "        input=prompt,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "    )\n",
+    "    return response.output_text"
    ]
   },
   {
@@ -74,7 +79,9 @@
     "Translate the following English text to Spanish: \\ \n",
     "```Hi, I would like to order a blender```\n",
     "\"\"\"\n",
+    "\n",
     "response = get_completion(prompt)\n",
+    "\n",
     "print(response) "
    ]
   },
@@ -120,9 +127,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "55c24eee",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eca8f668",
    "metadata": {},
+   "outputs": [],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following text to French and Spanish\n",
@@ -140,7 +149,11 @@
    "source": [
     "模型的输出，这里是法语，西班牙语，还有海盗英语。\n",
     "\n",
-    "French pirate: ```Je veux commander un ballon de basket``` Spanish pirate: ```Quiero pedir una pelota de baloncesto``` English pirate: ```I want to order a basketball```\n",
+    "French: ```Je veux commander un ballon de basket```\n",
+    "\n",
+    "Spanish: ```Quiero ordenar un balón de baloncesto```\n",
+    "\n",
+    "English pirate: ```I be wantin' to order a basketball```\n",
     "\n",
     "在一些语言中，翻译可能会因说话者与听众的关系而变化。你也可以向语言模型解释这一点，这样它就能进行相应的翻译。\n",
     "\n",
@@ -170,7 +183,9 @@
    "source": [
     "请注意，为了进行区别，我们在这里使用了不同于重音符的分隔符，而不是双引号。使用什么分隔符并不重要，只要能实现清晰的分隔就可以。\n",
     "\n",
-    "Formal: ¿Le gustaría ordenar una almohada? Informal: ¿Te gustaría ordenar una almohada?\n",
+    "Formal: ¿Le gustaría ordenar una almohada?\n",
+    "\n",
+    "Informal: ¿Te gustaría ordenar una almohada?\n",
     "\n",
     "模型的输出，在这里有正式和非正式用法的区别。正式用法是指当你和比你资深的人交谈或者在专业环境下使用的语气，而非正式用法是指你和朋友说话时所使用的语气。我其实不会说西班牙语，但是我爸爸会，他说这是正确的。"
    ]
@@ -195,11 +210,11 @@
    "outputs": [],
    "source": [
     "user_messages = [\n",
-    " \"La performance du système est plus lente que d'habitude.\", # System performance is slower than normal \n",
-    " \"Mi monitor tiene píxeles que no se iluminan.\", # My monitor has pixels that are not lighting\n",
-    " \"Il mio mouse non funziona\", # My mouse is not working\n",
-    " \"Mój klawisz Ctrl jest zepsuty\", # My keyboard has a broken control key\n",
-    " \"我的屏幕在闪烁\" # My screen is flashing\n",
+    "    \"La performance du système est plus lente que d'habitude.\", # System performance is slower than normal \n",
+    "    \"Mi monitor tiene píxeles que no se iluminan.\", # My monitor has pixels that are not lighting\n",
+    "    \"Il mio mouse non funziona\", # My mouse is not working\n",
+    "    \"Mój klawisz Ctrl jest zepsuty\", # My keyboard has a broken control key\n",
+    "    \"我的屏幕在闪烁\" # My screen is flashing\n",
     "]  "
    ]
   },
@@ -219,16 +234,16 @@
    "outputs": [],
    "source": [
     "for issue in user_messages:\n",
-    " prompt = f\"Tell me what language this is: ```{issue}```\"\n",
-    " lang = get_completion(prompt)\n",
-    " print(f\"Original message ({lang}): {issue}\")\n",
+    "    prompt = f\"Tell me what language this is: ```{issue}```\"\n",
+    "    lang = get_completion(prompt)\n",
+    "    print(f\"Original message ({lang}): {issue}\")\n",
     "\n",
-    " prompt = f\"\"\"\n",
-    " Translate the following text to English \\\n",
-    " and Korean: ```{issue}```\n",
-    " \"\"\"\n",
-    " response = get_completion(prompt)\n",
-    " print(response, \"\\n\") "
+    "    prompt = f\"\"\"\n",
+    "    Translate the following text to English \\\n",
+    "    and Korean: ```{issue}```\n",
+    "    \"\"\"\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response, \"\\n\") "
    ]
   },
   {
@@ -238,25 +253,35 @@
    "source": [
     "让我们运行一下。\n",
     "\n",
-    "Original message (This is French.): La performance du système est plus lente que d'habitude.\n",
-    "English: The system performance is slower than usual.\n",
-    "Korean: 시스템 성능이 평소보다 느립니다. \n",
+    "Original message (This text is in French.): La performance du système est plus lente que d'habitude.\n",
     "\n",
-    "Original message (This is Spanish.): Mi monitor tiene píxeles que no se iluminan.\n",
-    "English: My monitor has pixels that don't light up.\n",
-    "Korean: 내 모니터에는 불이 켜지지 않는 픽셀이 있습니다. \n",
+    "English: \"The system performance is slower than usual.\"\n",
     "\n",
-    "Original message (This is Italian.): Il mio mouse non funziona\n",
-    "English: My mouse is not working.\n",
-    "Korean: 내 마우스가 작동하지 않습니다. \n",
+    "Korean: \"시스템 성능이 평소보다 느립니다.\" \n",
     "\n",
-    "Original message (This is Polish.): Mój klawisz Ctrl jest zepsuty\n",
-    "English: My Ctrl key is broken.\n",
-    "Korean: 제 Ctrl 키가 고장 났어요. \n",
+    "Original message (This sentence is in Spanish.): Mi monitor tiene píxeles que no se iluminan.\n",
     "\n",
-    "Original message (This is Chinese (Simplified).): 我的屏幕在闪烁\n",
-    "English: My screen is flickering.\n",
-    "Korean: 내 화면이 깜빡입니다.  \n",
+    "English: \"My monitor has pixels that do not light up.\"\n",
+    "\n",
+    "Korean: \"내 모니터에는 빛나지 않는 픽셀이 있습니다.\" \n",
+    "\n",
+    "Original message (This phrase is in Italian. It translates to \"My mouse is not working\" in English.): Il mio mouse non funziona\n",
+    "\n",
+    "English: My mouse is not working\n",
+    "\n",
+    "Korean: 내 마우스가 작동하지 않아요 \n",
+    "\n",
+    "Original message (This text is in Polish.): Mój klawisz Ctrl jest zepsuty\n",
+    "\n",
+    "English: My Ctrl key is broken\n",
+    "\n",
+    "Korean: 제 Ctrl 키가 고장 났어요 \n",
+    "\n",
+    "Original message (This text is in Chinese.): 我的屏幕在闪烁\n",
+    "\n",
+    "English: My screen is flickering\n",
+    "\n",
+    "Korean: 내 화면이 깜박거립니다\n",
     "\n",
     "模型的输出是，这条原始消息是法语，还有各种语言的消息，然后模型将它们翻译成英语和韩语。你可以在这里看到，模型的输出是 “This is French”， 这是因为此在提示中要求的响应格式是“This is French”。如果你希望只用一个单词或不用句子来回答，你可以试着编辑这个提示。或者你也可以要求它以 JSON 格式或类似的方式，这将会鼓励它不要使用整个句子来回答。\n",
     "\n",
@@ -301,7 +326,13 @@
    "source": [
     "我们来执行一下。\n",
     "\n",
-    "Dear Sir/Madam, I am writing to bring to your attention a standing lamp that I believe may be of interest to you. Please find attached the specifications for your review. Thank you for your time and consideration. Sincerely, Joe\n",
+    "Dear Sir/Madam,\n",
+    "\n",
+    "I am writing to bring to your attention the specifications of the standing lamp. \n",
+    "\n",
+    "Sincerely,\n",
+    "\n",
+    "Joe\n",
     "\n",
     "正如你所看到的，我们得到了一封更正式的商业信函，提出关于落地灯规格的建议。"
    ]
@@ -327,11 +358,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " data_json = { \"resturant employees\" :[ \n",
-    " {\"name\":\"Shyam\", \"email\":\"shyamjaiswal@gmail.com\"},\n",
-    " {\"name\":\"Bob\", \"email\":\"bob32@gmail.com\"},\n",
-    " {\"name\":\"Jai\", \"email\":\"jai87@gmail.com\"}\n",
-    "]}\n",
+    "data_json = { \n",
+    "    \"resturant employees\" :[ \n",
+    "        {\"name\":\"Shyam\", \"email\":\"shyamjaiswal@gmail.com\"},\n",
+    "        {\"name\":\"Bob\", \"email\":\"bob32@gmail.com\"},\n",
+    "        {\"name\":\"Jai\", \"email\":\"jai87@gmail.com\"}\n",
+    "    ]\n",
+    "}\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Translate the following python dictionary from JSON to an HTML \\\n",
@@ -393,7 +426,7 @@
    "id": "616b436b",
    "metadata": {},
    "source": [
-    "在这里，你可以看到这是一个格式正确的 HTML 表格。\n",
+    "预期可以看到下面格式的 HTML 表格。\n",
     "\n",
     "![html](./img/6-1.jpg)"
    ]
@@ -422,18 +455,19 @@
    "outputs": [],
    "source": [
     "text = [ \n",
-    " \"The girl with the black and white puppies have a ball.\", # The girl has a ball.\n",
-    " \"Yolanda has her notebook.\", # ok\n",
-    " \"Its going to be a long day. Does the car need it’s oil changed?\", # Homonyms\n",
-    " \"Their goes my freedom. There going to bring they’re suitcases.\", # Homonyms\n",
-    " \"Your going to need you’re notebook.\", # Homonyms\n",
-    " \"That medicine effects my ability to sleep. Have you heard of the butterfly affect?\", # Homonyms\n",
-    " \"This phrase is to cherck chatGPT for speling abilitty\" # spelling\n",
+    "    \"The girl with the black and white puppies have a ball.\", # The girl has a ball.\n",
+    "    \"Yolanda has her notebook.\", # ok\n",
+    "    \"Its going to be a long day. Does the car need it’s oil changed?\", # Homonyms\n",
+    "    \"Their goes my freedom. There going to bring they’re suitcases.\", # Homonyms\n",
+    "    \"Your going to need you’re notebook.\", # Homonyms\n",
+    "    \"That medicine effects my ability to sleep. Have you heard of the butterfly affect?\", # Homonyms\n",
+    "    \"This phrase is to cherck chatGPT for speling abilitty\" # spelling\n",
     "]\n",
+    "\n",
     "for t in text:\n",
-    " prompt = f\"Proofread and correct: ```{t}```\"\n",
-    " response = get_completion(prompt)\n",
-    " print(response) "
+    "    prompt = f\"Proofread and correct: ```{t}```\"\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response) "
    ]
   },
   {
@@ -443,7 +477,15 @@
    "source": [
     "运行程序，模型输出如下。\n",
     "\n",
-    "\"The girl with the black and white puppies has a ball.\" There are no errors in this sentence. \"It's going to be a long day. Does the car need it’s oil changed?\" \"There goes my freedom. They're going to bring their suitcases.\" \"Your going to need your notebook.\" \"That medicine affects my ability to sleep. Have you heard of the butterfly effect?\" \"This phrase is to check ChatGPT for spelling abilitty.\"\n",
+    "```\n",
+    "The girl with the black and white puppies has a ball.\n",
+    "Yolanda has her notebook.\n",
+    "\"It's going to be a long day. Does the car need its oil changed?\"\n",
+    "Here is the corrected version: \"There goes my freedom. They are going to bring their suitcases.\"\n",
+    "You're going to need your notebook.\n",
+    "\"That medicine affects my ability to sleep. Have you heard of the butterfly effect?\"\n",
+    "This phrase is to check ChatGPT for spelling ability.\n",
+    "```\n",
     "\n",
     "就这样，这个模型能够纠正所有这些语法错误。\n",
     "\n",
@@ -457,23 +499,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " text = [ \n",
-    " \"The girl with the black and white puppies have a ball.\", # The girl has a ball.\n",
-    " \"Yolanda has her notebook.\", # ok\n",
-    " \"Its going to be a long day. Does the car need it’s oil changed?\", # Homonyms\n",
-    " \"Their goes my freedom. There going to bring they’re suitcases.\", # Homonyms\n",
-    " \"Your going to need you’re notebook.\", # Homonyms\n",
-    " \"That medicine effects my ability to sleep. Have you heard of the butterfly affect?\", # Homonyms\n",
-    " \"This phrase is to cherck chatGPT for speling abilitty\" # spelling\n",
+    "text = [ \n",
+    "    \"The girl with the black and white puppies have a ball.\", # The girl has a ball.\n",
+    "    \"Yolanda has her notebook.\", # ok\n",
+    "    \"Its going to be a long day. Does the car need it’s oil changed?\", # Homonyms\n",
+    "    \"Their goes my freedom. There going to bring they’re suitcases.\", # Homonyms\n",
+    "    \"Your going to need you’re notebook.\", # Homonyms\n",
+    "    \"That medicine effects my ability to sleep. Have you heard of the butterfly affect?\", # Homonyms\n",
+    "    \"This phrase is to cherck chatGPT for speling abilitty\" # spelling\n",
     "]\n",
+    "\n",
     "for t in text:\n",
-    " prompt = f\"\"\"Proofread and correct the following text\n",
-    " and rewrite the corrected version. If you don't find\n",
-    " and errors, just say \"No errors found\". Don't use \n",
-    " any punctuation around the text:\n",
-    " ```{t}```\"\"\"\n",
-    " response = get_completion(prompt)\n",
-    " print(response) "
+    "    prompt = f\"\"\"Proofread and correct the following text\n",
+    "    and rewrite the corrected version. If you don't find\n",
+    "    and errors, just say \"No errors found\". Don't use \n",
+    "    any punctuation around the text:\n",
+    "    ```{t}```\"\"\"\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response) "
    ]
   },
   {
@@ -483,7 +526,15 @@
    "source": [
     "让我们来试试这个提示。通过这种方式，我们能够. . . 哦，这里还在使用引号。\n",
     "\n",
-    "The girl with the black and white puppies has a ball. No errors found. It's going to be a long day. Does the car need its oil changed? There goes my freedom. They're going to bring their suitcases. You're going to need your notebook. That medicine affects my ability to sleep. Have you heard of the butterfly effect? This phrase is to check ChatGPT for spelling ability.\n",
+    "```\n",
+    "The girl with the black and white puppies has a ball.\n",
+    "No errors found\n",
+    "It's going to be a long day. Does the car need its oil changed?\n",
+    "No errors found\n",
+    "You're going to need your notebook.\n",
+    "No errors found\n",
+    "This phrase is to check ChatGPT for spelling ability.\n",
+    "```\n",
     "\n",
     "通过这种方式，我们能够. . . 哦，这里还在使用引号。\n",
     "\n",
@@ -509,6 +560,7 @@
     "the same price. It arrived a day earlier than expected, so I got \\\n",
     "to play with it myself before I gave it to my daughter.\n",
     "\"\"\"\n",
+    "\n",
     "prompt = f\"proofread and correct this review: ```{text}```\"\n",
     "response = get_completion(prompt)\n",
     "print(response)\n",
@@ -522,7 +574,7 @@
    "source": [
     "很好。所以我们有了这个纠正的版本。\n",
     "\n",
-    "I got this for my daughter's birthday because she keeps taking mine from my room. Yes, adults also like pandas too. She takes it everywhere with her, and it's super soft and cute. However, one of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. Additionally, it's a bit small for what I paid for it. I think there might be other options that are bigger for the same price. On the positive side, it arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter.\n",
+    "I got this for my daughter for her birthday because she keeps taking mine from my room. Yes, adults also like pandas too. She takes it everywhere with her, and it's super soft and cute. One of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. It's a bit small for what I paid for it though. I think there might be other options that are bigger for the same price. It arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter.\n",
     "\n",
     "我们还可以做一个很酷的事情，就是找到原始评论和模型输出之间的差异。我们将使用 RedLines Python 包来实现这个功能。我们将获取评论的原始文本和模型输出之间的差异，然后显示出来。"
    ]
@@ -545,7 +597,7 @@
    "id": "8214debf",
    "metadata": {},
    "source": [
-    "在这里你可以看到原始评论和模型输出之间的差异，以及已经纠正的内容（红色）。我们在这里使用的提示是，校对并更正这篇评论。\n",
+    "预期在下面可以看到原始评论和模型输出之间的差异，以及已经纠正的内容（红色）。我们在这里使用的提示是，校对并更正这篇评论。\n",
     "\n",
     "![html](./img/6-2.jpg)\n",
     "\n",
@@ -567,6 +619,7 @@
     "Output in markdown format.\n",
     "Text: ```{text}```\n",
     "\"\"\"\n",
+    "\n",
     "response = get_completion(prompt)\n",
     "display(Markdown(response)) "
    ]
@@ -578,7 +631,7 @@
    "source": [
     "我们来执行这个操作。\n",
     "\n",
-    "在这里，我们有一个扩展的 APA 样式的评论，关于毛绒熊猫。\n",
+    "预期有一个扩展的 APA 样式的评论，关于毛绒熊猫。\n",
     "\n",
     "![review](./img/6-3.jpg)\n",
     "\n",
