lecture7-expand.ipynb: finish

--- a/lecture7-expand.ipynb
+++ b/lecture7-expand.ipynb
@@ -46,12 +46,12 @@
     "client = OpenAI()\n",
     "\n",
     "# 2. 定义 get_completion 方法\n",
-    "def get_completion(prompt, instructions=None, model=\"gpt-3.5-turbo\"):\n",
+    "def get_completion(prompt, instructions=None, model=\"gpt-3.5-turbo\", temperature=0):\n",
     "    response = client.responses.create(\n",
     "        model=model,\n",
     "        instructions=instructions,\n",
     "        input=prompt,\n",
-    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "        temperature=temperature, # this is the degree of randomness of the model's output\n",
     "    )\n",
     "    return response.output_text"
    ]
@@ -116,7 +116,8 @@
     "consumer loyalty to maintain sales. Got it in about \\\n",
     "two days.\n",
     "\"\"\"\n",
-    " prompt = f\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
     "Your task is to send an email reply to a valued customer.\n",
     "Given the customer email delimited by ```, \\\n",
@@ -131,6 +132,7 @@
     "Customer review: ```{review}```\n",
     "Review sentiment: {sentiment}\n",
     "\"\"\"\n",
+    "\n",
     "response = get_completion(prompt)\n",
     "print(response) "
    ]
@@ -189,6 +191,7 @@
     "Customer review: ```{review}```\n",
     "Review sentiment: {sentiment}\n",
     "\"\"\"\n",
+    "\n",
     "response = get_completion(prompt, temperature=0.7)\n",
     "print(response) "
    ]
