--- a/lecture7-expand.ipynb
+++ b/lecture7-expand.ipynb
@@ -144,7 +144,19 @@
    "source": [
     "于是，生成了一个给客户的回复，它涉及客户在评论中提到的细节。正如我们所指示的，建议客户联系客户服务，因为这只是一个 AI 客户服务代理。\n",
     "\n",
-    "Dear Valued Customer, Thank you for taking the time to leave a review about our product. We are sorry to hear that you experienced an increase in price and that the quality of the product did not meet your expectations. We apologize for any inconvenience this may have caused you. We would like to assure you that we take all feedback seriously and we will be sure to pass your comments along to our team. If you have any further concerns, please do not hesitate to reach out to our customer service team for assistance. Thank you again for your review and for choosing our product. We hope to have the opportunity to serve you better in the future. Best regards, AI customer agent"
+    "Subject: Apology and Resolution for Your Recent Experience\n",
+    "\n",
+    "Dear Valued Customer,\n",
+    "\n",
+    "Thank you for taking the time to share your detailed feedback with us. We sincerely apologize for the inconvenience you experienced with the pricing changes and the quality of the product you purchased. Your insights are valuable to us, and we are committed to improving our products and services based on customer feedback.\n",
+    "\n",
+    "We regret to hear about the issue with the motor and the warranty expiration. We understand your frustration and would like to offer our assistance. Please feel free to reach out to our customer service team at [customer service contact information] for further support and resolution.\n",
+    "\n",
+    "We appreciate your loyalty and trust in our brand. Your feedback will be shared with our product development team to ensure better quality control in the future.\n",
+    "\n",
+    "Thank you once again for bringing this to our attention. We value your feedback and strive to provide a better experience for all our customers.\n",
+    "\n",
+    "AI Customer Agent"
    ]
   },
   {
@@ -203,7 +215,19 @@
    "source": [
     "在 temperature=0 的情况下，每次执行相同的提示时，你可以期待相同的输出。而当 temperature=0.7 时，每次都会得到不同的输出。\n",
     "\n",
-    "Dear Valued Customer, Thank you for taking the time to leave a review on our 17 piece system. We appreciate your feedback and we're sorry to hear that you experienced a price increase in December. We apologize for any inconvenience this may have caused. Regarding the issue with the motor noise after a year, we suggest reaching out to our customer service team for assistance. We're sorry to hear that the warranty has already expired, but our team may still be able to assist you with a solution. We appreciate your loyalty to our brand and we will continue to work on improving our products. Thank you again for your review. Best regards, AI customer agent\n",
+    "Subject: Apology and Assistance Regarding Your Recent Experience\n",
+    "\n",
+    "Dear valued customer,\n",
+    "\n",
+    "Thank you for taking the time to share your feedback with us. We are truly sorry to hear about the challenges you encountered with our pricing and product quality. Your detailed insights are greatly appreciated, and we apologize for any inconvenience this may have caused.\n",
+    "\n",
+    "We strive to provide our customers with the best value and quality products, and your feedback helps us identify areas where we can improve. If you have any further concerns or would like to discuss this matter further, please do not hesitate to reach out to our customer service team for assistance.\n",
+    "\n",
+    "We value your loyalty and trust in our brand, and we are committed to addressing your feedback to ensure a better experience in the future.\n",
+    "\n",
+    "Thank you once again for bringing this to our attention.\n",
+    "\n",
+    "AI customer agent\n",
     "\n",
     "这里输出了生成的电子邮件，正如你所看到的，这与我们以前生成的电子邮件不同。让我们再执行一次，将又一次得到不同的电子邮件。\n",
     "\n",
