lecture8-chatbot.ipynb: finish

--- a/lecture8-chatbot.ipynb
+++ b/lecture8-chatbot.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1d73429a",
    "metadata": {},
    "outputs": [],
@@ -47,23 +47,22 @@
     "\n",
     "client = OpenAI()\n",
     "\n",
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "    model=model,\n",
-    "    messages=messages,\n",
-    "    temperature=0, # this is the degree of randomness of the model's output\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=temperature, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]\n",
+    "    return response.choices[0].message.content\n",
     "\n",
     "def get_completion_from_messages(messages, model=\"gpt-3.5-turbo\", temperature=0):\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "    model=model,\n",
     "    messages=messages,\n",
     "    temperature=temperature, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    # print(str(response.choices[0].message))\n",
-    "    return response.choices[0].message[\"content\"] "
+    "    return response.choices[0].message.content\n"
    ]
   },
   {
@@ -257,6 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import panel as pn # GUI\n",
+    "\n",
     "def collect_messages(_):\n",
     "    prompt = inp.value_input\n",
     "    inp.value = ''\n",
@@ -266,7 +267,7 @@
     "    panels.append(\n",
     "    pn.Row('User:', pn.pane.Markdown(prompt, width=600)))\n",
     "    panels.append(\n",
-    "    pn.Row('Assistant:', pn.pane.Markdown(response, width=600, style={'background-color': '#F6F6F6'})))\n",
+    "    pn.Row('Assistant:', pn.pane.Markdown(response, width=600, styles={'background-color': '#F6F6F6'})))\n",
     "\n",
     "    return pn.Column(*panels) "
    ]
@@ -286,7 +287,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import panel as pn # GUI\n",
     "pn.extension()\n",
     "\n",
     "panels = [] # collect display \n",
