lecture8-chatbot.ipynb: finish

--- a/lecture8-chatbot.ipynb
+++ b/lecture8-chatbot.ipynb
@@ -328,9 +328,9 @@
     "interactive_conversation = pn.bind(collect_messages, button_conversation)\n",
     "\n",
     "dashboard = pn.Column(\n",
-    " inp,\n",
-    " pn.Row(button_conversation),\n",
-    " pn.panel(interactive_conversation, loading_indicator=True, height=300),\n",
+    "    inp,\n",
+    "    pn.Row(button_conversation),\n",
+    "    pn.panel(interactive_conversation, loading_indicator=True, height=300),\n",
     ")\n",
     "\n",
     "dashboard "
@@ -402,7 +402,7 @@
     "于是，这里我们得到订单的摘要。如果需要，我们可以将其提交给订单系统。这就是我们所需要的。\n",
     "\n",
     "Sure, here's a JSON summary of the order:\n",
-    "```\n",
+    "```json\n",
     "{\n",
     " \"pizza\": [\n",
     " {\n",
